# vand-2026

./: .gitignore  LICENSE  README.md
tracks/industrial/: pyproject.toml
tracks/industrial/src/industrial/: model.py  submit.py  test.py  train.py
tracks/industrial/src/industrial/cpr/: runner.py  test_orig.py  train_orig.py
tracks/industrial/src/industrial/cpr/dataset/: __init__.py  base.py
tracks/industrial/src/industrial/cpr/tools/: generate_foreground.py  generate_retrieval.py  generate_synthetic_data.py
tracks/industrial/src/industrial/ensemble/: combine.py  pipeline.py
tracks/industrial/src/industrial/inp_former/: dataset.py  runner.py  utils.py
tracks/industrial/src/industrial/inp_former/dinov2/models/: vision_transformer.py
tracks/industrial/src/industrial/inp_former/models/: uad.py  vit_encoder.py
tracks/industrial/src/industrial/shared/: analyze_agreement.py  augment_validation.py  seg_f1.py  synth_lighting.py  visualize_scores.py
