[project]
name = "vand-industrial"
version = "0.1.0"
description = "VAND 4.0 Industrial Track — INP-Former + CPR Ensemble"
requires-python = ">=3.11"
dependencies = [
    "vand-utils",
    # Deep learning
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9.12",
    "kornia>=0.7.3",
    "einops",
    # Image processing
    "opencv-python",
    "Pillow>=9.4",
    "tifffile>=2023.0",
    # Scientific
    "numpy>=1.24",
    "scipy",
    "scikit-learn>=1.3",
    # Augmentation
    "imgaug",
    # Metrics & logging
    "adeval>=1.1.0",
    "torchmetrics==0.10.3",
    "loguru",
    "tensorboard",
    "matplotlib",
    "tqdm>=4.64",
]

[project.scripts]
train-industrial = "industrial.train:main"
test-industrial = "industrial.test:main"
submit-industrial = "industrial.submit:main"

[tool.uv.sources]
vand-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/industrial"]
